--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,9 @@ version '1.0-SNAPSHOT'
 
 buildscript {
     ext {
-        springBootVersion = "1.5.3.RELEASE"
-        junitVersion = "4.12"
         lombokVersion = "1.16.16"
+        springBootVersion = "1.5.6.RELEASE"
+        springCloudVersion = "1.3.1.RELEASE"
     }
     repositories {
         jcenter()
@@ -18,19 +18,11 @@ buildscript {
     }
 }
 
-allprojects {
-    ext {
-    }
-
-    repositories {
-        jcenter()
-        mavenLocal()
-        mavenCentral()
-    }
-}
-
 subprojects {
     apply plugin: 'java'
+    apply plugin: 'org.springframework.boot'
+    apply plugin: 'io.spring.dependency-management'
+    apply plugin: 'idea'
 
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
@@ -51,11 +43,18 @@ subprojects {
         exclude group: 'ch.qos.logback'
     }
 
+    dependencyManagement {
+        imports {
+            mavenBom "org.springframework.cloud:spring-cloud-netflix:${springCloudVersion}"
+        }
+    }
+
     dependencies {
-        compile "org.springframework.boot:spring-boot-starter-log4j2:${springBootVersion}"
+        compile "org.springframework.boot:spring-boot-starter-log4j2"
+
         compileOnly "org.projectlombok:lombok:${lombokVersion}"
 
-        testCompile "junit:junit:${junitVersion}"
+        testCompile "org.springframework.boot:spring-boot-starter-test"
     }
 }
 
