--- a/web-project/build.gradle
+++ b/web-project/build.gradle
@@ -1,7 +1,12 @@
 dependencies {
     compile "org.springframework.boot:spring-boot-starter-hateoas"
+    compile "org.springframework.boot:spring-boot-starter-security"
     compile "org.springframework.boot:spring-boot-starter-actuator"
     compile "org.springframework.boot:spring-boot-starter-web"
 
     compile "io.springfox:springfox-swagger2:2.7.0"
+    compile "io.springfox:springfox-swagger-ui:2.7.0"
+
+    compile "de.codecentric:spring-boot-admin-starter-client:1.5.3"
+
 }
